<resources>
    <string name="app_name">Debrecen Tour Guide</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="debrecen">Debrecen</string>
    <string name="enjoy_your_stay">Enjoy your stay here!</string>
    <string name="sights">Sights</string>
    <string name="cafés">Cafés</string>
    <string name="restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="mockup_name">MockUpName</string>
    <string name="voltegyszer_details">They might be known for the friendliness, great coffee or perhaps even the great atmosphere of their coffee shop, but their carrot cake is the signature serving platter of Debrecen !</string>
    <string name="voltegyszer_name">Volt Egyszer</string>
    <string name="open_times_9_21">9:00 - 21:00</string>
    <string name="pepepanini_name">Pepe Panini Cafe</string>
    <string name="pepepanini_details">As a student in the university, this place is an awesome place. And the staff there are friendly and if you go there enough, they just might have your order memorized</string>
    <string name="kismandula_name">Kismandula Confectionery</string>
    <string name="kismandula_details">This patisserie has the best location: it\'s near to the Great Church and also to the main streets of the city center. You can\'t miss it, there isn\'t any confectionery near and far.</string>
    <string name="maszek_name">Maszek</string>
    <string name="maszek_details">Nice pub and food is good. Our burgers were huge and the fries were tasty too. Also if you are upstairs you can call on one of the old fashioned phones down to the bar and order more drinks. Pretty cool.</string>
    <string name="butiq_name">Butiq</string>
    <string name="butiq_details">The place is located next to the biggest shopping mall, the food is really good and tasty, drinks are good, staff is friendly and kind.</string>
    <string name="drazse_name">Drazsé</string>
    <string name="drazse_details">They have the best coffee and the cookies are good too, I like the atmosphere and the service.</string>
    <string name="melange_name">Melange</string>
    <string name="kasmsmir_name">Kashmir</string>
    <string name="kashmir_details">An amazing Indian restaurant that offers a variety of foods and a good service. Is very easy to find and is worth it.</string>
    <string name="melange_details">This place hardly can be recognized from outside, but it has a lot inside!</string>
    <string name="belga_name">Belga</string>
    <string name="calico_details">Very nice place with good atmosphere. Indoor and outdoor seating areas. Food is good value, portions are very large.</string>
    <string name="calico_name">Calico Jack</string>
    <string name="bonita_name">Bonita</string>
    <string name="ikon_name">Ikon</string>
    <string name="csokonai_name">Csokonai</string>
    <string name="csokonai_details">This is affordable and quiet bar and the restaurant. Situated in just of few steps from the Physics Faculty of Debrecen University</string>
    <string name="belga_details">Cool style and pretty good food, for sure the portions are huge ( be careful with orders) Friendly people and nice discover for Debrecen.</string>
    <string name="ikon_details">Not the cheapest restaurant in town but the food is pretty tasty. Huge portions, nice waiters, clean bathroom.</string>
    <string name="bonita_details">Cutest place to eat in Debrecen. You will absolutely love it! :)</string>
    <string name="greatchurch_name">Great Church</string>
    <string name="greatchurch_details">The Reformed Great Church of Debrecen is one of the most significant Classicist historic buildings of Hungary.</string>
    <string name="smallchurch_details">The building was constructed in 1600, but in the fire of 1727 it suffered severe damage.</string>
    <string name="smallchurch_name">Small Church</string>
    <string name="aranybika_details">Grand Hotel Aranybika is located in the heart of Debrecen. The present Art Nouveau building was built by the plans of Alfred Hajos, Hungary\'s first olimpic champion, in 1915.</string>
    <string name="aranybika_name">Aranybika</string>
    <string name="lyciumtree_name">Lycium Tree</string>
    <string name="lyciumtree_details">It’s a botanic curiosity. The tree is almost 250 years old and located at the corner of Füvészkert and Muzeum streets.</string>
    <string name="university_name">University of Debrecen</string>
    <string name="univerity_details">Our institution is one of Hungary’s five research-elite universities, offering the widest choice of majors in the country for over 32,000 students.</string>
    <string name="divinus_name">Divinus</string>
    <string name="divinus_details">Located within walking distance of the center of Debrecen, near the famous Great Forest.</string>
    <string name="platan_name">Platan</string>
    <string name="platan_details">Boasting close proximity to the centre and airport in a quiet suburb of Debrecen, this property presents the ideal base for your trip.</string>
    <string name="eszti_name">Eszti Vendégház</string>
    <string name="eszti_details">Featuring free WiFi, a seasonal outdoor pool and a barbecue, Eszti Vendégház offers pet-friendly accommodations in Debrecen.</string>
    <string name="erdospuszta_name">Erdőspuszta</string>
    <string name="erdospuszta_details">Erdőspuszta Club Hotel Fenyves is set amongst lush greenery, 6 km from the city Debrecen. Free WiFi access is provided.</string>
    <string name="centrum_name">Centrum</string>
    <string name="centrum_details">The 3-star superior Centrum Hotel is set in the historic centre of Debrecen near the Reformed Protestant Cathedral and to the most important offices and institutions in Debrecen.</string>
    <string name="lyceum_name">Hotel Lyceum</string>
    <string name="lyceum_details">Featuring a free wellness area with an indoor pool, a sauna and hot tub.</string>
    <string name="cheapest">$</string>
    <string name="cheap">$$</string>
    <string name="moderate">$$$</string>
    <string name="expensive">$$$$</string>
    <string name="twoStars">★★</string>
    <string name="threeStars">★★★</string>
    <string name="fourStars">★★★★</string>
    <string name="fiveStars">★★★★★</string>
    <string name="sharevia">Share via</string>
    <string name="debrecen_awesome">Debrecen is Awesome!</string>
    <string name="send_email">Send your email in:</string>
    <string name="text_plain">text/plain</string>
    <string name="plain_text">plain/text</string>
    <string name="welcome">Welcome to Debrecen!</string>
</resources>
